--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,20 @@ project(mathlib
     VERSION 1.0.0
     DESCRIPTION "a custom mathematics library")
 
-set(HEADERS
+add_library(mathlib SHARED)
+
+target_sources(mathlib PUBLIC
+    include/Constants.h
+    include/Convert.h
+    include/EquationSolving.h
+    include/Matrix.h
+    include/MatrixTransform.h
+    include/Vector.h PRIVATE
+    src/Convert.cpp
+    src/EquationSolving.cpp
+    src/MatrixTransform.cpp)
+
+set(INSTALL_HEADERS
     include/Constants.h
     include/Convert.h
     include/EquationSolving.h
@@ -13,17 +26,7 @@ set(HEADERS
     include/MatrixTransform.h
     include/Vector.h)
 
-set(SOURCES
-    src/Convert.cpp
-    src/EquationSolving.cpp
-    src/MatrixTransform.cpp)
-
-add_library(mathlib SHARED
-    ${SOURCES})
-
-install(
-    TARGETS mathlib
+install(TARGETS mathlib
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION lib)
-install(FILES ${HEADERS}
-    DESTINATION include/mathlib)
+install(FILES ${INSTALL_HEADERS} DESTINATION include/mathlib)
